DTSAM-1239 Add accessTypes and Roles to the test.